--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,16 @@ accounts:
     coins: ["20000token", "200000000stake"]
   - name: bob
     coins: ["10000token", "100000000stake"]
+  - name: charlie
+    coins: ["10000token", "100000000stake"]
+  - name: dave
+    coins: ["10000token", "100000000stake"]
+  - name: eve
+    coins: ["10000token", "100000000stake"]
+  - name: faith
+    coins: ["10000token", "100000000stake"]
+  - name: nobody
+    coins: ["1token", "100000000stake"]
 validator:
   name: alice
   staked: "100000000stake"
